; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_sn2.c_xpc_init_IRQ_amo_sn2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_sn2.c_xpc_init_IRQ_amo_sn2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.amo* }
%struct.amo = type { i32 }

@xpc_vars_sn2 = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.amo* (i32)* @xpc_init_IRQ_amo_sn2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.amo* @xpc_init_IRQ_amo_sn2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.amo*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @xpc_vars_sn2, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load %struct.amo*, %struct.amo** %5, align 8
  %7 = load i32, i32* %2, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds %struct.amo, %struct.amo* %6, i64 %8
  store %struct.amo* %9, %struct.amo** %3, align 8
  %10 = load %struct.amo*, %struct.amo** %3, align 8
  %11 = call i32 @xpc_receive_IRQ_amo_sn2(%struct.amo* %10)
  %12 = load %struct.amo*, %struct.amo** %3, align 8
  ret %struct.amo* %12
}

declare dso_local i32 @xpc_receive_IRQ_amo_sn2(%struct.amo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
